# MUFG-Champion-Ship

./: .gitattributes  .gitignore  README.md  preprocess.py  pyproject.toml
conf/: main.yaml
conf/model/params/: catboost.yaml  lightgbm.yaml  xgblgbm.yaml  xgblgbmcat.yaml  xgboost.yaml
dataset/: dataset.py
datasets/: test_stacking_bert_replyContent_v2.csv  test_stacking_bert_review_v2.csv  test_stacking_deberta_replyContent_v2.csv  test_stacking_deberta_review_v2.csv  test_stacking_roberta_replyContent_v2.csv  test_stacking_roberta_review_v2.csv  train_fix17.csv  train_fix_final.csv  train_stacking_bert_replyContent_v2.csv  train_stacking_bert_review_v2.csv  train_stacking_deberta_replyContent_v2.csv  train_stacking_deberta_review_v2.csv  train_stacking_roberta_replyContent_v2.csv  train_stacking_roberta_review_v2.csv
experiment/: experiment.py  optuna.py  utils.py
model/: base_model.py  gbm.py  get_model.py  utils.py
model/ensemble/: __init__.py  ensemble.py  xgb_lgbm.py
