[tool.poetry]
name = "mufg-champion-ship"
version = "0.1.0"
description = ""
authors = ["LeonTanemura <leontanemura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
hydra-core = "^1.3.2"
optuna = "^3.6.1"
xgboost = "2.0.3"
lightgbm = "^4.5.0"
matplotlib = "^3.9.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
